--- a/index.html
+++ b/index.html
@@ -13,49 +13,73 @@
       height: 100vh;
     }
 
-    .box {
+    .box-container {
+      position: relative;
       width: 200px;
       height: 200px;
-      background: #8c52ff;
-      color: white;
-      border-radius: 10px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      perspective: 1000px;
       cursor: pointer;
-      position: relative;
-      transition: transform 0.3s ease;
     }
 
-    .box:hover {
-      transform: scale(1.05);
+    .box {
+      width: 100%;
+      height: 100%;
+      background: #8c52ff;
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      position: relative;
+      overflow: hidden;
+    }
+
+    .lid {
+      width: 100%;
+      height: 50%;
+      background: #6a36cc;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform-origin: top center;
+      transition: transform 0.6s ease;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+      z-index: 2;
     }
 
     .message {
-      display: none;
       position: absolute;
-      bottom: -40px;
-      background: #333;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       color: white;
-      padding: 10px;
-      border-radius: 5px;
-      font-size: 14px;
-      white-space: nowrap;
+      font-size: 18px;
+      text-align: center;
+      opacity: 0;
+      transition: opacity 0.6s ease 0.3s;
+      z-index: 1;
+    }
+
+    .box.open .lid {
+      transform: rotateX(-120deg);
+    }
+
+    .box.open .message {
+      opacity: 1;
     }
   </style>
 </head>
 <body>
 
-  <div class="box" onclick="openBox()">
-    Click to Open
-    <div class="message" id="secretMessage">🎉 Surprise! You found the message!</div>
+  <div class="box-container" onclick="openBox()">
+    <div class="box" id="box">
+      <div class="lid"></div>
+      <div class="message">🎉 Surprise Inside!</div>
+    </div>
   </div>
 
   <script>
     function openBox() {
-      const message = document.getElementById('secretMessage');
-      message.style.display = 'block';
+      const box = document.getElementById('box');
+      box.classList.add('open');
     }
   </script>
 
